--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="./assets/img/logo.svg" alt="Batatabit logo">
+        <div class="header--title-container">
+            <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <a href="" class="header--button">
+                Conoce Nuestros Planes <span></span>
+            </a>
+        </div>
+    </header>
     <main>
         <section></section>
         <section></section>
