--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="main-exchange-container">
+            <div class="backgroungImg">
+
+            </div>
+            <div class="main-exchange-container--title">
+                <h2>Visibillizamos todas las tasas de cambio.</h2>
+                <p>Traemos información en tiempo real de las casas de cambio y las monedas mas importantes del mundo.</p>
+            </div>
+            <section class="main-tables-container">
+                <div>
+
+                </div>
+            </section>
+        </section>
         <section></section>
         <section></section>
         <section></section>
