finalizando la primer seccion del main

--- a/index.html
+++ b/index.html
@@ -31,8 +31,31 @@
                 <p>Traemos información en tiempo real de las casas de cambio y las monedas mas importantes del mundo.</p>
             </div>
             <section class="main-tables-container">
-                <div>
-
+                <div class="main-currency-table">
+                    <p class="currency-table--tittle">Monedas</p>
+                    <div class="currency-table--container">
+                        <table>
+                            <tr>
+                                <td class="tabe__top-left">Bitcoin</td>
+                                <td class="table__top-right table-right">$1.96</td>
+                            </tr>
+                            <tr>
+                                <td>Ethereum</td>
+                                <td class="table-right">$0.07</td>
+                            </tr>
+                            <tr>
+                                <td>Ripple</td>
+                                <td class="table-right">$2.15</td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left">Stellar</td>
+                                <td class="table__bottom-right table-right">$4.96</td>
+                            </tr>
+                        </table>
+                        <div class="currency-table--date">
+                            <p><b>Actualizado:</b> 19 de Julio 23:45</p>
+                        </div>
+                    </div>
                 </div>
             </section>
         </section>
