seccion de tablas terminada

--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
                     <div class="currency-table--container">
                         <table>
                             <tr>
-                                <td class="tabe__top-left">Bitcoin</td>
-                                <td class="table__top-right table-right">$1.96</td>
+                                <td class="table__top-left">Bitcoin</td>
+                                <td class="table__top-right table-right">$1.96<span class="down"></span></td>
                             </tr>
                             <tr>
                                 <td>Ethereum</td>
-                                <td class="table-right">$0.07</td>
+                                <td class="table-right">$0.07<span class="up"></span></td>
                             </tr>
                             <tr>
                                 <td>Ripple</td>
-                                <td class="table-right">$2.15</td>
+                                <td class="table-right">$2.15<span class="down"></span></td>
                             </tr>
                             <tr>
                                 <td class="table__bottom-left">Stellar</td>
-                                <td class="table__bottom-right table-right">$4.96</td>
+                                <td class="table__bottom-right table-right">$4.96<span class="down"></span></td>
                             </tr>
                         </table>
+                        </div>
                         <div class="currency-table--date">
                             <p><b>Actualizado:</b> 19 de Julio 23:45</p>
-                        </div>
                     </div>
                 </div>
             </section>
