finalizando segunda tabla

--- a/index.html
+++ b/index.html
@@ -59,7 +59,22 @@
                 </div>
             </section>
         </section>
-        <section></section>
+        <section class="main-comition-container">
+            <div class="main-comition-container--title">
+                <p class="main-comition-container-comition">Comisiones</p>
+                <div class="main-comition-container--fees">
+                    <p class="container-left">Bitrade</p>
+                    <p class="container-right">$12.96</p>
+                    <p class="container-left">Bitpreco</p>
+                    <p class="container-right">$13.07</p>
+                    <p class="container-left">Novadax</p>
+                    <p class="container-right">$13.15</p>
+                    <p class="container-left">Coinext</p>
+                    <p class="container-right">$14.96</p>
+                </div>
+                <p>Actualizado: 19 de Julio 23:48</p>
+            </div>
+        </section>
         <section></section>
         <section></section>
     </main>
