seccion de tablas terminada

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                     <p class="container-left">Coinext</p>
                     <p class="container-right">$14.96</p>
                 </div>
-                <p>Actualizado: 19 de Julio 23:48</p>
+                <div class="fees-container--date">
+                    <p><b>Actualizado:</b> 19 de Julio 23:48</p>
+                </div>
             </div>
         </section>
         <section></section>
