--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
                     <p class="product--card-title">Tiempo real</p>
                     <p class="product--card-body">Nuestra API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
                 </article>
+                <article class="product-detail--card">
+                    <span class="eye"></span>
+                    <p class="product--card-title">No hay tasas escondidas</p>
+                    <p class="product--card-body">Ni en la compra o al momento de exit, Batatabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="money"></span>
+                    <p class="product--card-title">Compara monedas</p>
+                    <p class="product--card-body">No más rumores, con Batatabit sabrás el valor real de cada moneda en el mercado actual.</p>
+                </article>
+                <article class="product-detail--card">
+                    <span class="check"></span>
+                    <p class="product--card-title">Información confiable</p>
+                    <p class="product--card-body">Nuestras fuentes estan 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+                </article>
             </section>
         </section>
         <section></section>
