--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
                 </article>
             </section>
         </section>
-        <section></section>
+        <section class="bitcoin-img-container">
+            <h2>Conócelo hoy</h2>
+        </section>
     </main>
     <footer></footer>
 </body>
