--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div>
             <section class="plans-container--slider">
                 <article class="plans-container--card">
-                    <p class="recommeded">Recomendado</p>
+                    <p class="recommended">Recomendado</p>
                     <div class="plan-info-container">
                         <h3 class="plan-card--title">Pago Anual</h3>
                         <p class="plan-card--price"><span>$</span>99</p>
