--- a/index.html
+++ b/index.html
@@ -124,6 +124,24 @@
                         <button class="plan-card--ca">Escoger este <span></span></button>
                     </div>
                 </article>
+                <article class="plans-container--card">
+                    <p class="monthly">Más comprado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago mensual</h3>
+                        <p class="plan-card--price"><span>$</span>9.00</p>
+                        <p class="plan-card--saving">* Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <p class="lifetime">De por vida</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Un solo pago</h3>
+                        <p class="plan-card--price"><span>$</span>399</p>
+                        <p class="plan-card--saving">* Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
                 <article></article>
                 <article></article>
             </section>
