--- a/index.html
+++ b/index.html
@@ -57,25 +57,25 @@
                             <p><b>Actualizado:</b> 19 de Julio 23:45</p>
                     </div>
                 </div>
+                <section class="main-comition-container">
+                    <div class="main-comition-container--title">
+                        <p class="main-comition-container-comition">Comisiones</p>
+                        <div class="main-comition-container--fees">
+                            <p class="container-left">Bitrade</p>
+                            <p class="container-right">$12.96</p>
+                            <p class="container-left">Bitpreco</p>
+                            <p class="container-right">$13.07</p>
+                            <p class="container-left">Novadax</p>
+                            <p class="container-right">$13.15</p>
+                            <p class="container-left">Coinext</p>
+                            <p class="container-right">$14.96</p>
+                        </div>
+                        <div class="fees-container--date">
+                            <p><b>Actualizado:</b> 19 de Julio 23:48</p>
+                        </div>
+                    </div>
+                </section>
             </section>
-        </section>
-        <section class="main-comition-container">
-            <div class="main-comition-container--title">
-                <p class="main-comition-container-comition">Comisiones</p>
-                <div class="main-comition-container--fees">
-                    <p class="container-left">Bitrade</p>
-                    <p class="container-right">$12.96</p>
-                    <p class="container-left">Bitpreco</p>
-                    <p class="container-right">$13.07</p>
-                    <p class="container-left">Novadax</p>
-                    <p class="container-right">$13.15</p>
-                    <p class="container-left">Coinext</p>
-                    <p class="container-right">$14.96</p>
-                </div>
-                <div class="fees-container--date">
-                    <p><b>Actualizado:</b> 19 de Julio 23:48</p>
-                </div>
-            </div>
         </section>
         <section class="main-product-detail">
             <span class="product-detail--batata-logo"></span>
@@ -142,11 +142,20 @@
                         <button class="plan-card--ca">Escoger este <span></span></button>
                     </div>
                 </article>
-                <article></article>
-                <article></article>
             </section>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="left">
+            <ul>
+                <li><a href="#"></a>Linkedin</li>
+                <li><a href="#"></a>Crunchbase</li>
+                <li><a href="#"></a>Hackernews</li>
+            </ul>
+        </section>
+        <section class="right">
+            <img src="./assets/img/logo-footer.svg" alt="Logo de Batatabit">
+        </section>
+    </footer>
 </body>
 </html>
